各垃圾收集器对应的性能指标